2004-05-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/chess_computer.xml.in: fixed messages
	* boards/chess_movelearn.xml.in: fixed messages
	* boards/chess_partyend.xml.in: fixed messages
	* boards/images/scenery3_background.jpg: cleanup jpeg fuzzy
	* boards/images/scenery_background.jpg: cleanup jpeg fuzzy
	* boards/images/superbrain_background.jpg: cleanup jpeg fuzzy
	* boards/skins/default/help_bg.png: now bigger
	* boards/superbrain.xml.in: fixed messages
	* configure.in: changed french alphabet version VERSION_VOICES_ALPHABET_FR=1.1
	* src/gcompris/help.c: (gcompris_help_start): fixed layout

2004-05-10  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/skins/default/help_bg.png: remade this image cause it was bugging winxp
	* boards/sounds/fr/alphabet/0.ogg: Reworked all the french alphabet sounds to normalize them and une mono
	* boards/sounds/fr/alphabet/1.ogg:
	* boards/sounds/fr/alphabet/10.ogg:
	* boards/sounds/fr/alphabet/2.ogg:
	* boards/sounds/fr/alphabet/3.ogg:
	* boards/sounds/fr/alphabet/4.ogg:
	* boards/sounds/fr/alphabet/5.ogg:
	* boards/sounds/fr/alphabet/6.ogg:
	* boards/sounds/fr/alphabet/7.ogg:
	* boards/sounds/fr/alphabet/8.ogg:
	* boards/sounds/fr/alphabet/9.ogg:
	* boards/sounds/fr/alphabet/README:
	* boards/sounds/fr/alphabet/a.ogg:
	* boards/sounds/fr/alphabet/b.ogg:
	* boards/sounds/fr/alphabet/c.ogg:
	* boards/sounds/fr/alphabet/d.ogg:
	* boards/sounds/fr/alphabet/e.ogg:
	* boards/sounds/fr/alphabet/f.ogg:
	* boards/sounds/fr/alphabet/g.ogg:
	* boards/sounds/fr/alphabet/h.ogg:
	* boards/sounds/fr/alphabet/i.ogg:
	* boards/sounds/fr/alphabet/j.ogg:
	* boards/sounds/fr/alphabet/k.ogg:
	* boards/sounds/fr/alphabet/l.ogg:
	* boards/sounds/fr/alphabet/m.ogg:
	* boards/sounds/fr/alphabet/n.ogg:
	* boards/sounds/fr/alphabet/o.ogg:
	* boards/sounds/fr/alphabet/p.ogg:
	* boards/sounds/fr/alphabet/q.ogg:
	* boards/sounds/fr/alphabet/r.ogg:
	* boards/sounds/fr/alphabet/s.ogg:
	* boards/sounds/fr/alphabet/t.ogg: